--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -1,5 +1,66 @@
+<div class="lg:flex lg:items-center lg:justify-between mt-3 mb-6">
+	<div class="min-w-0 flex-1">
+		<h2 class="text-2xl font-bold leading-7 text-white sm:truncate sm:text-3xl sm:tracking-tight">My Pantry</h2>
+		<div class="mt-1 flex flex-col sm:mt-0 sm:flex-row sm:flex-wrap sm:space-x-6">
+			<div class="mt-2 flex items-center text-sm text-gray-300">
+				<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+					<path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+				</svg>
+
+				Manage your pantry and upcoming meals from this dashboard.
+			</div>
+		</div>
+	</div>
+	<div class="mt-5 flex lg:ml-4 lg:mt-0">
+		<span class="hidden sm:block"> <%= button_to "New Ingredient", ingredients_path, class: button_style({style: :primary}), data: { "turbo-method": "get"} %> </span>
+		<span class="ml-3 hidden sm:block"> <%= button_to "New Recipe", new_recipe_path, class: button_style({style: :white}) %> </span>
+		<span class="sm:ml-3"> <%= button_to "New Grocery List", new_grocery_list_path, class: button_style({style: :white}) %> </span>
+
+		<!-- Dropdown -->
+		<div class="relative ml-3 sm:hidden">
+			<button
+				type="button"
+				class="inline-flex items-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:ring-gray-400"
+				id="mobile-menu-button"
+				aria-expanded="false"
+				aria-haspopup="true"
+			>
+				More
+				<svg class="-mr-1 ml-1.5 h-5 w-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+					<path
+						fill-rule="evenodd"
+						d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z"
+						clip-rule="evenodd"
+					/>
+				</svg>
+			</button>
+
+			<!--
+        Dropdown menu, show/hide based on menu state.
+
+        Entering: "transition ease-out duration-200"
+          From: "transform opacity-0 scale-95"
+          To: "transform opacity-100 scale-100"
+        Leaving: "transition ease-in duration-75"
+          From: "transform opacity-100 scale-100"
+          To: "transform opacity-0 scale-95"
+      -->
+			<div
+				class="absolute right-0 z-10 -mr-1 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none"
+				role="menu"
+				aria-orientation="vertical"
+				aria-labelledby="mobile-menu-button"
+				tabindex="-1"
+			>
+				<!-- Active: "bg-gray-100", Not Active: "" -->
+				<a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="mobile-menu-item-0">Edit</a>
+				<a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="mobile-menu-item-1">View</a>
+			</div>
+		</div>
+	</div>
+</div>
 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 mb-4">
-	<div class="border-2 border-dashed border-gray-300 rounded-lg dark:border-gray-600 h-32 md:h-64"></div>
+	<div class="border-2 border-dashed rounded-lg border-gray-300 dark:border-gray-600 h-32 md:h-64"></div>
 	<div class="border-2 border-dashed rounded-lg border-gray-300 dark:border-gray-600 h-32 md:h-64"></div>
 	<div class="border-2 border-dashed rounded-lg border-gray-300 dark:border-gray-600 h-32 md:h-64"></div>
 	<div class="border-2 border-dashed rounded-lg border-gray-300 dark:border-gray-600 h-32 md:h-64"></div>
