--- a/app/views/ingredients/create_request.turbo_stream.erb
+++ b/app/views/ingredients/create_request.turbo_stream.erb
@@ -1,3 +1,3 @@
-<%= turbo_stream.replace turbo_modal_id do %>
+<%= turbo_stream.update turbo_modal_id do %>
   <%= render partial: 'common/modals/basic_modal' %>
 <% end %>
