--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -2,12 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-/*
-
-@layer components {
-  .btn-primary {
-    @apply py-2 px-4 bg-blue-200;
-  }
+@font-face {
+  font-family: 'Lato';
+  src: url('assets/Lato-Regular.ttf') format('truetype');
+  src: url('assets/Lato-Bold.ttf') format('truetype');
 }
-
-*/
