--- a/app/views/ingredients/_form.html.erb
+++ b/app/views/ingredients/_form.html.erb
@@ -4,26 +4,11 @@
     <!-- Ingredient Name Field -->
     <div class="form-group">
       <%= form.label :name, 'Ingredient Name' %>
-      <%= form.text_field :name, class: 'form-control', placeholder: 'Enter ingredient name', required: true %>
-    </div>
-    <!-- Other ingredient fields can be added here as needed -->
-    <div class="isolate -space-y-px rounded-md shadow-sm">
-      <div class="relative rounded-md rounded-b-none px-3 pb-1.5 pt-2.5 ring-1 ring-inset ring-gray-300 focus-within:z-10 focus-within:ring-2 focus-within:ring-indigo-600">
-        <label for="name" class="block text-xs font-medium text-gray-900">Name</label>
-        <input type="text" name="name" id="name" class="block w-full border-0 p-0 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" placeholder="Jane Smith">
-      </div>
-      <div class="relative rounded-md rounded-t-none px-3 pb-1.5 pt-2.5 ring-1 ring-inset ring-gray-300 focus-within:z-10 focus-within:ring-2 focus-within:ring-indigo-600">
-        <label for="job-title" class="block text-xs font-medium text-gray-900">Job Title</label>
-        <input type="text" name="job-title" id="job-title" class="block w-full border-0 p-0 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" placeholder="Head of Tomfoolery">
-      </div>
-    </div>
-    <div>
-      <label for="location" class="block text-sm font-medium leading-6 text-gray-900">Location</label>
-      <select id="location" name="location" class="mt-2 block w-full rounded-md border-0 py-1.5 pl-3 pr-10 text-gray-900 ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6">
-        <option>United States</option>
-        <option selected>Canada</option>
-        <option>Mexico</option>
-      </select>
+      <%= form.text_field :name, class: 'form-control', placeholder: 'E.g., Apples, Potatoes', required: true %>
+      <%= form.label :quantity, 'Quantity' %>
+      <%= form.number_field :quantity, class: 'form-control', placeholder: 'E.g., 1, 2, 3', required: true %>
+      <%= form.label :unit, 'Unit' %>
+      <%= form.select :unit, Ingredient::UNITS, { include_blank: 'Select a unit' }, class: 'form-control', required: true %>
     </div>
   </div>
   <div class="modal-footer">
