--- a/app/views/ingredients/_form.html.erb
+++ b/app/views/ingredients/_form.html.erb
@@ -15,6 +15,6 @@
     <!-- Submit Button -->
     <%= form.submit 'Save', class: 'btn btn-primary' %>
     <!-- Close Modal Button -->
-    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+    <%= link_to "Go back to Dashboard", root_path, method: :get, class: button_style({style: :wide, is_link: true }) %>
   </div>
 <% end %>
