--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="antialiased bg-gray-50 w-screen">
-      <nav class="bg-white border-b border-gray-200 px-4 py-2.5 fixed left-0 right-0 top-0 z-50">
+      <nav class="bg-white px-4 py-2.5 fixed left-0 right-0 top-0 z-50 w-64">
         <div class="flex flex-wrap justify-between items-center">
           <div class="flex justify-start items-center">
             <a href="https://flowbite.com" class="flex items-center justify-between mr-4">
@@ -27,7 +27,7 @@
       </nav>
       <!-- Sidebar -->
       <aside
-        class="fixed top-0 left-0 z-40 w-64 h-screen pt-14 bg-white border-r border-gray-200 md:translate-x-0"
+        class="fixed top-0 left-0 z-40 w-64 h-screen pt-14 bg-white md:translate-x-0"
         aria-label="Sidenav"
         id="drawer-navigation"
       >
@@ -85,7 +85,7 @@
                   </aside>
                 </div>
                 <%# View Area %>
-                <main class="relative ml-64 px-6 h-auto pt-20 bg-black">
+                <main class="relative ml-64 px-6 h-auto pt-20 bg-transparent">
                   <%= turbo_frame_tag turbo_modal_id %>
                   <%= yield %>
                 </main>
