--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -1,6 +1,6 @@
 <div class="lg:flex lg:items-center lg:justify-between mt-3 mb-6">
   <div class="min-w-0 flex-1">
-    <h2 class="text-2xl font-bold leading-7 text-black sm:truncate sm:text-3xl sm:tracking-tight">My Pantry</h2>
+    <h2 class="text-2xl font-regular leading-7 text-black sm:truncate sm:text-3xl sm:tracking-tight uppercase">My Pantry</h2>
     <div class="mt-1 flex flex-col sm:mt-0 sm:flex-row sm:flex-wrap sm:space-x-6">
       <div class="mt-2 flex items-center text-sm text-gray-600">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
@@ -34,20 +34,9 @@
 						clip-rule="evenodd" />
         </svg>
       </button>
-      <!--
-        Dropdown menu, show/hide based on menu state.
-
-        Entering: "transition ease-out duration-200"
-          From: "transform opacity-0 scale-95"
-          To: "transform opacity-100 scale-100"
-        Leaving: "transition ease-in duration-75"
-          From: "transform opacity-100 scale-100"
-          To: "transform opacity-0 scale-95"
-      -->
       <div
 				class="absolute right-0 z-10 -mr-1 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none"
 				role="menu" aria-orientation="vertical" aria-labelledby="mobile-menu-button" tabindex="-1">
-        <!-- Active: "bg-gray-100", Not Active: "" -->
         <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1"
 					id="mobile-menu-item-0">Edit</a>
         <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1"
