--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
                   <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 15a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm0 0h8m-8 0-1-4m9 4a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-9-4h10l2-7H3m2 7L3 4m0 0-.792-3H1"/>
                 </svg>
               </div>
-              <span class="self-center text-2xl font-light whitespace-nowrap uppercase">Leftovers</span>
+              <span class="self-center text-2xl font-black whitespace-nowrap uppercase">Leftovers</span>
             </a>
           </div>
         </div>
