--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -1,4 +1,4 @@
-<div class="lg:flex lg:items-center lg:justify-between mt-3 mb-6">
+<div class="lg:flex lg:items-center lg:justify-between mt-3 mb-6 px-4">
   <div class="min-w-0 flex-1">
     <h2 class="text-2xl font-bold leading-7 text-black sm:truncate sm:text-3xl sm:tracking-tight">My Pantry</h2>
     <div class="mt-1 flex flex-col sm:mt-0 sm:flex-row sm:flex-wrap sm:space-x-6">
@@ -55,24 +55,24 @@
       </div>
     </div>
   </div>
-</div>
-<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 mb-4">
-  <div class="border-2 border-dashed rounded-lg border-gray-300 dark:border-gray-600 h-32 md:h-64"></div>
-  <div class="border-2 border-dashed rounded-lg border-gray-300 dark:border-gray-600 h-32 md:h-64"></div>
-  <div class="border-2 border-dashed rounded-lg border-gray-300 dark:border-gray-600 h-32 md:h-64"></div>
-  <div class="border-2 border-dashed rounded-lg border-gray-300 dark:border-gray-600 h-32 md:h-64"></div>
-</div>
-<div class="border-2 border-dashed rounded-lg border-gray-300 dark:border-gray-600 h-96 mb-4"></div>
-<div class="grid grid-cols-2 gap-4 mb-4">
-  <div class="border-2 border-dashed rounded-lg border-gray-300 dark:border-gray-600 h-48 md:h-72"></div>
-  <div class="border-2 border-dashed rounded-lg border-gray-300 dark:border-gray-600 h-48 md:h-72"></div>
-  <div class="border-2 border-dashed rounded-lg border-gray-300 dark:border-gray-600 h-48 md:h-72"></div>
-  <div class="border-2 border-dashed rounded-lg border-gray-300 dark:border-gray-600 h-48 md:h-72"></div>
-</div>
-<div class="border-2 border-dashed rounded-lg border-gray-300 dark:border-gray-600 h-96 mb-4"></div>
-<div class="grid grid-cols-2 gap-4">
-  <div class="border-2 border-dashed rounded-lg border-gray-300 dark:border-gray-600 h-48 md:h-72"></div>
-  <div class="border-2 border-dashed rounded-lg border-gray-300 dark:border-gray-600 h-48 md:h-72"></div>
-  <div class="border-2 border-dashed rounded-lg border-gray-300 dark:border-gray-600 h-48 md:h-72"></div>
-  <div class="border-2 border-dashed rounded-lg border-gray-300 dark:border-gray-600 h-48 md:h-72"></div>
+  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4">
+    <div class="border-2 border-dashed rounded-lg border-gray-300 h-32 md:h-64"></div>
+    <div class="border-2 border-dashed rounded-lg border-gray-300 h-32 md:h-64"></div>
+    <div class="border-2 border-dashed rounded-lg border-gray-300 h-32 md:h-64"></div>
+    <div class="border-2 border-dashed rounded-lg border-gray-300 h-32 md:h-64"></div>
+  </div>
+  <div class="border-2 border-dashed rounded-lg border-gray-300 dark:border-gray-600 h-96 mb-4"></div>
+  <div class="grid grid-cols-2 gap-4 mb-4">
+    <div class="border-2 border-dashed rounded-lg border-gray-300 h-48 md:h-72"></div>
+    <div class="border-2 border-dashed rounded-lg border-gray-300 h-48 md:h-72"></div>
+    <div class="border-2 border-dashed rounded-lg border-gray-300 h-48 md:h-72"></div>
+    <div class="border-2 border-dashed rounded-lg border-gray-300 h-48 md:h-72"></div>
+  </div>
+  <div class="border-2 border-dashed rounded-lg border-gray-300 dark:border-gray-600 h-96 mb-4"></div>
+  <div class="grid grid-cols-2 gap-4">
+    <div class="border-2 border-dashed rounded-lg border-gray-300 h-48 md:h-72"></div>
+    <div class="border-2 border-dashed rounded-lg border-gray-300 h-48 md:h-72"></div>
+    <div class="border-2 border-dashed rounded-lg border-gray-300 h-48 md:h-72"></div>
+    <div class="border-2 border-dashed rounded-lg border-gray-300 h-48 md:h-72"></div>
+  </div>
 </div>
