--- a/app/views/common/modals/_parent_modal.html.erb
+++ b/app/views/common/modals/_parent_modal.html.erb
@@ -4,7 +4,7 @@
   <div class="fixed inset-0 z-10 overflow-y-auto">
     <div class="mt-5 sm:mt-6">
     </div>
-    <div class="flex min-h-full items-end justify-center p-4 text-center sm:items-center sm:p-0">
+    <div class="flex min-h-[90%] items-end justify-center p-4 text-center sm:items-center sm:p-0">
       <!--
         Modal panel, show/hide based on modal state.
 
