--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -45,13 +45,8 @@
     </div>
   </div>
 </div>
-<div class='container'>
-  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4">
-    <div class="border-2 border-dashed rounded-lg border-gray-300 h-32 md:h-64"></div>
-    <div class="border-2 border-dashed rounded-lg border-gray-300 h-32 md:h-64"></div>
-    <div class="border-2 border-dashed rounded-lg border-gray-300 h-32 md:h-64"></div>
-    <div class="border-2 border-dashed rounded-lg border-gray-300 h-32 md:h-64"></div>
-  </div>
+<div class='container shadow-inner p-4 rounded-lg bg-gray-50'>
+  <%= render partial: 'ingredients/previews', locals: { recent_ingredients: @recent_ingredients } %>
   <div class="border-2 my-4 border-dashed rounded-lg border-gray-300 h-96"></div>
   <div class="grid grid-cols-2 gap-4 mb-4">
     <div class="border-2 border-dashed rounded-lg border-gray-300 h-48 md:h-72"></div>
